fixed spacing in profile and edit profile

--- a/src/pages/edit-profile/edit-profile.scss
+++ b/src/pages/edit-profile/edit-profile.scss
@@ -12,6 +12,7 @@ page-edit-profile {
 
   .title {
     text-align: center;
+    margin-bottom: 0px;
   }
 
   .avatar {
@@ -20,6 +21,7 @@ page-edit-profile {
 
   .avatarCol{
     background-color: $secondary-color;
+    margin-bottom: 0px;
 
   }
 
