--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -11,12 +11,15 @@ page-profile {
 
   .title {
     text-align: center;
+    margin-bottom: 0px;
   }
 
 
   .avatar {
     text-align: center;
+    margin-bottom: 0px;
   }
+
 
   .avatarCol{
     background-color: $secondary-color;
@@ -42,6 +45,11 @@ page-profile {
 
   .scroll-content{
     overflow-y: hidden;
+
+  }
+
+  .email{
+    margin:0px;
 
   }
 
